--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,8 @@ author: Cécile Guillot
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  A propos de moi: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
