--- a/_config.yml
+++ b/_config.yml
@@ -36,15 +36,15 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-email: "cecile.gltslmcs@gmail.com"
+  email: "cecile.gltslmcs@gmail.com"
 # facebook: deanattali
-github: sylvariane
+  github: sylvariane
 # twitter: daattali
 # patreon: DeanAttali
 # youtube: c/daattali
-#  medium: yourname
-#  reddit: yourname
-linkedin: cecile.gltslmcs
+# medium: yourname
+# reddit: yourname
+   linkedin: cecile.gltslmcs
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -69,8 +69,8 @@ rss-description: This website is a virtual proof that I'm awesome
 # Select which social network share links to show in posts
 share-links-active:
   twitter: false
-  facebook: false
-  linkedin: false
+  facebook: true
+  linkedin: true
   vk: false
 
 # How to display the link to your website in the footer
