--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "cecile.gltslmcs@gmail.com"
+  email: "cecile.gltslmcs@protonmail.com"
 # facebook: deanattali
   github: sylvariane
 # twitter: daattali
@@ -44,7 +44,7 @@ social-network-links:
 # youtube: c/daattali
 # medium: yourname
 # reddit: yourname
-  linkedin: cecile.gltslmcs
+  linkedin: cecile-gltslmcs
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
